tests/spec/emit/snapshots/channel_iteration_skips_a_nil_channel.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:context"
  
  fn test() {
    let mut seen = 0
    for _ in context.Background().Done() {
      seen += 1
    }
    if seen != 0 {
      panic("a nil channel must not yield values")
    }
  }
---
package main

import "context"

func test() {
	seen := 0
	ch := context.Background().Done()
	if ch != nil {
		for range ch {
			seen++
		}
	}
	if seen != 0 {
		panic("a nil channel must not yield values")
	}
}
