tests/spec/emit/snapshots/channel_length.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(ch: Channel<int>) -> int {
    ch.length()
  }
---
package main

func test(ch chan int) int {
	return len(ch)
}
