tests/spec/emit/snapshots/channel_new.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> Channel<int> {
    Channel.new<int>()
  }
---
package main

func test() chan int {
	return make(chan int)
}
