tests/spec/emit/snapshots/channel_new_unit_type.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> Channel<()> {
    Channel.new<()>()
  }
---
package main

func test() chan struct{} {
	return make(chan struct{})
}
