tests/spec/emit/snapshots/channel_split.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() -> (Sender<int>, Receiver<int>) {
    let ch = Channel.new<int>();
    ch.split()
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() (chan<- int, <-chan int) {
	ch := make(chan int)
	tup := lisette.ChannelSplit(ch)
	return tup.First, tup.Second
}
