tests/spec/emit/snapshots/channel_split_destructure.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() {
    let ch = Channel.new<int>();
    let (tx, rx) = ch.split();
    tx.send(42);
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	ch := make(chan int)
	tx := (chan<- int)(ch)
	lisette.SenderSend(tx, 42)
}
