tests/spec/emit/snapshots/channel_split_destructure_channel_alias.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  type Inbox = Channel<int>
  
  fn drain(ch: Inbox) {
    let (tx, rx) = ch.split();
    tx.send(42);
    let _ = rx.receive();
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Inbox = chan int

func drain(ch Inbox) {
	tx := (chan<- int)(ch)
	rx := (<-chan int)(ch)
	lisette.SenderSend(tx, 42)
	lisette.ReceiverReceive(rx)
}
